--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,8 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+<view class='container'>
+  <view class='single'>
+    <view wx:for='{{content}}' wx:key="index" bindtap='toast'>
+    <image src='/resources/location.png'></image>
+    <view class='text'><text>{{item.kind}}</text></view>
+    </view>
   </view>
 </view>
