--- a/pages/where/where.wxss
+++ b/pages/where/where.wxss
@@ -1,11 +1,15 @@
-.container{
-  width:100%;
-  height:100%;
-  position:absolute;
-  top:0;
-  bottom:0;
+.textDesc{
+  text-align:center;
 }
-#map{
-  height:100%;
+.textDesc label{
+  display:block;
+  font-family: Microsoft YaHei;
+}
+
+.pic{
+  height:300rpx;
+}
+.pic image{
   width:100%;
+  height:100%;
 }
